2008-02-21 Shlomi Fish <shlomif@iglu.org.il>
	* Converted to Build.PL and placed INET6.pm under lib/.
	* Added a "repository" URL to the POD. 
	* Added the pod.t and pod-coverage.t files and we now have full POD
	coverage.
	* Added more dependencies to the Build.PL.
	* Added the credit of "Shlomi Fish".
	* Changed the email address of Rafael to the new one in the ChangeLog
	and README files.
	* Someone reported that sockflow() and peerflow() were broken. The reason
	for that was that unpack_sockaddr_in6_all was not imported from Socket6.
	This release fixes it (with tests in t/host6.t).
	* New Release IO-Socket-INET6-2.53

2008-02-05 Shlomi Fish <shlomif@iglu.org.il>

	* New Release IO-Socket-INET6-2.52
	* Added a test for peerhost() too.
	* Fixed sockhost() with the fact that inet_ntop() was not imported.
		- Added a test.
	* Added "use warnings" to IO::Socket::INET6.
	* Added a modified version of my patch (with more comments) to patch 
	the problems I found in IO-Socket-INET6. (generating 
	warnings upon using and failed tests.).

2004-18-10  Rafael Martinez Torres <rmartine@fdi.ucm.es>

	* New Release INET6-2.51 .
	* Patch from David Town <David.Town@marconi.com>
	  - peeraddr(), sockaddr() methods implemented.
	  - peerhost(), peerport(), sockhost(), sockport() improved efficiency.
	  - New optional parameters: Local(Peer)Flow,Local(Peer)Scopeid. (Only for IPv6)
	  - Local hack for MSWin32 platforms.

2003-12-12  Rafael Martinez Torres <rmartine@fdi.ucm.es>

	* New Release INET6-2.01 .
	* Patch from Wouter de Jong <wouter@widexs.nl>
	  - fixing the parser on regexp at sock_info()
	* Patch from Olaf M.Kolkman <olaf@ripe.net>
	  - Toggle the -w flag to avoid some warning messages around tests
	* fixing peerhost method.

2003-11-24  Rafael Martinez Torres <rmartine@fdi.ucm.es>

	* New Release INET6-2.00 . Protocol independent IPv4-IPv6.
	* New paramter: Domain => AF_UNSPEC(def.),AF_INET,AF_INET6
	* Replace _get_addr by getnameinfo()