@@ -1,3 +1,8 @@
+2008-02-22 Shlomi Fish <shlomif@iglu.org.il>
+	* Added pack_sockaddr_in6_all to the imports from Socket6 to fix
+	the "configure" sub in several cases. Added t/configure6.t to test it.
+	* New Release IO-Socket-INET6-2.54
+
 2008-02-21 Shlomi Fish <shlomif@iglu.org.il>
 	* Converted to Build.PL and placed INET6.pm under lib/.
 	* Added a "repository" URL to the POD. 
